Fix alignment bugs with Discovery and Podcast pages

--- a/src/pages/discovery/discovery.scss
+++ b/src/pages/discovery/discovery.scss
@@ -10,6 +10,7 @@
 	justify-content: space-between;
 	width: 80%;
 	margin: 0 auto;
+	padding-bottom: 2rem;
 	gap: 1rem;
 	height: 100%;
 
@@ -21,7 +22,7 @@
 		width: 80vw;
 		border-style: groove;
 		text-align: left;
-		padding-bottom: 2rem;
+		padding-bottom: 1rem;
 		vertical-align: middle;
 		height: auto;
 		@media (min-width: 1360px) {
